--- a/src/main/resources/templates/public/dashboard.html
+++ b/src/main/resources/templates/public/dashboard.html
@@ -4,8 +4,9 @@
 <head>
     <title>ZBRA-GO Admin</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"
-          rel="stylesheet" media="screen" />
+    <link th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet" media="screen" />
+    <link th:href="@{/css/main.css}" rel="stylesheet"/>
+
     <script th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
 </head>
 
@@ -13,6 +14,60 @@
     <div class="container">
         <h1>ZBRA-GO Dashboard</h1>
         <hr />
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png" />
+                    </div>
+
+                    <div class="card-content">
+                        <h3>Team ZBRA 1</h3>
+                        <ul>
+                            <li>Eu</li>
+                            <li>Você</li>
+                            <li>Nós</li>
+                        </ul>
+                        <strong>Current Level: 3</strong>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png" />
+                    </div>
+
+                    <div class="card-content">
+                        <h3>Team ZBRA 2</h3>
+                        <ul>
+                            <li>Eu</li>
+                            <li>Você</li>
+                            <li>Nós</li>
+                        </ul>
+                        <strong>Current Level: 3</strong>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png" />
+                    </div>
+
+                    <div class="card-content">
+                        <h3>Team ZBRA 3</h3>
+                        <ul>
+                            <li>Eu</li>
+                            <li>Você</li>
+                            <li>Nós</li>
+                        </ul>
+                        <strong>Current Level: 3</strong>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
